test/tests/stages/18_structures/valid/extra_credit/other_features/label_tag_member_namespace.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[36]:
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(x)
  {
  int
  identifier(x)
  ;
  }
  ;
  struct
  identifier(x)
  identifier(x)
  =
  {
  const int(10)
  }
  ;
  goto
  identifier(x)
  ;
  return
  const int(0)
  ;
  identifier(x)
  :
  return
  identifier(x)
  .
  identifier(x)
  ;
  }
