test/tests/stages/18_structures/invalid_types/invalid_struct_declaration/duplicate_struct_declaration.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[26]:
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(x)
  {
  int
  identifier(x)
  ;
  }
  ;
  struct
  identifier(x)
  {
  int
  identifier(y)
  ;
  }
  ;
  return
  const int(0)
  ;
  }
